import { Controller, Post, Get, Body, Query, HttpCode, HttpStatus, UnauthorizedException, Request } from '@nestjs/common'
import { ApiTags, ApiOperation, ApiResponse as SwaggerApiResponse } from '@nestjs/swagger'
import { BaseController } from '../../common/controllers/base.controller'
import { Public } from '../../common/decorators/public.decorator'
import { ApiResponse } from '../../common/response/types'
import { UserService as UserServiceImpl } from './user.service'
import { User, AuthResponse, GetUsersRequest, GetUsersResponse, LoginRequest, CreateUserFormRequest, UpdateUserRequest, ProfileResponse } from '../../shared/users'
import { Validator } from '../../common/validators'
import { USER_ENUMS, getUserStatusDesc } from './enums/user.enums'
import { isNotEmpty } from '../../utils'

/**
 * ç”¨æˆ·çŠ¶æ€æ“ä½œè¯·æ±‚
 */
interface UserStatusActionRequest {
  /** æ“ä½œç±»å‹ï¼šactivate-æ¿€æ´»ï¼Œdeactivate-ä¸‹çº¿ï¼Œlock-é”å®šï¼Œunlock-è§£é” */
  action: 'activate' | 'deactivate' | 'lock' | 'unlock'
}

/**
 * ç”¨æˆ·è®¤è¯å’Œç®¡ç† HTTP æ§åˆ¶å™¨
 * ä½¿ç”¨ proto å®šä¹‰çš„ç±»å‹ç¡®ä¿å‰åç«¯æ¥å£ä¸€è‡´æ€§
 */
@ApiTags('Users')
@Controller('api')
export class UserHttpController extends BaseController {
  constructor(private readonly userService: UserServiceImpl) {
    super('UserHttpController')
  }

  // ========================================
  // ğŸ“‹ æšä¸¾é…ç½®æ¥å£
  // ========================================

  /**
   * è·å–ç”¨æˆ·æ¨¡å—æšä¸¾
   */
  @Get('users/enums')
  @ApiOperation({
    summary: 'è·å–ç”¨æˆ·æ¨¡å—æšä¸¾',
    description: 'è·å–ç”¨æˆ·æ¨¡å—æ‰€æœ‰æšä¸¾é…ç½®ï¼ŒåŒ…æ‹¬ç”¨æˆ·çŠ¶æ€ã€ç”¨æˆ·ç±»å‹ç­‰'
  })
  @SwaggerApiResponse({
    status: 200,
    description: 'æˆåŠŸè·å–ç”¨æˆ·æ¨¡å—æšä¸¾é…ç½®'
  })
  async getUserEnums() {
    const enumResponse = {
      enums: {
        userStatus: Object.values(USER_ENUMS.USER_STATUS),
        userType: Object.values(USER_ENUMS.USER_TYPE)
      },
      version: '1.0.0'
    }

    return this.success(enumResponse, 'è·å–ç”¨æˆ·æ¨¡å—æšä¸¾æˆåŠŸ')
  }

  // ========================================
  // ğŸ” ç”¨æˆ·è®¤è¯ç›¸å…³æ¥å£
  // ========================================

  /**
   * ç”¨æˆ·ç™»å½•
   */
  @Public()
  @Post('auth/login')
  @HttpCode(HttpStatus.OK)
  @ApiOperation({
    summary: 'ç”¨æˆ·ç™»å½•',
    description: 'ä½¿ç”¨æ‰‹æœºå·å’Œå¯†ç è¿›è¡Œç”¨æˆ·ç™»å½•è®¤è¯'
  })
  @SwaggerApiResponse({
    status: 200,
    description: 'ç™»å½•æˆåŠŸï¼Œè¿”å›ç”¨æˆ·ä¿¡æ¯å’Œè®¿é—®ä»¤ç‰Œ'
  })
  @SwaggerApiResponse({
    status: 401,
    description: 'ç™»å½•å¤±è´¥ï¼Œæ‰‹æœºå·æˆ–å¯†ç é”™è¯¯'
  })
  async login(@Body() loginRequest: LoginRequest): Promise<ApiResponse<AuthResponse>> {
    // åŸºç¡€æ ¼å¼éªŒè¯
    Validator.phone(loginRequest.phone)
    Validator.password(loginRequest.password)

    // æ‰§è¡Œç™»å½•é€»è¾‘
    const result = await this.userService.login({
      phone: loginRequest.phone,
      password: loginRequest.password
    })

    if (!result) {
      throw new UnauthorizedException('æ‰‹æœºå·æˆ–å¯†ç é”™è¯¯')
    }

    // è·å–ç”¨æˆ·åŸºæœ¬ä¿¡æ¯
    const user = await this.userService.findOne(loginRequest.phone)

    // ç›´æ¥ç»„è£…å“åº”æ•°æ®
    const authResponse: AuthResponse = {
      user: {
        phone: user!.phone,
        username: user!.username || ''
      },
      token: result.token,
      expiresAt: this.formatDateTime(new Date(Date.now() + 24 * 60 * 60 * 1000))
    }

    return this.success(authResponse, 'ç™»å½•æˆåŠŸ')
  }

  /**
   * è·å–å½“å‰ç”¨æˆ·ä¿¡æ¯
   */
  @Get('auth/profile')
  @ApiOperation({
    summary: 'è·å–å½“å‰ç”¨æˆ·ä¿¡æ¯',
    description: 'è·å–å½“å‰ç™»å½•ç”¨æˆ·çš„è¯¦ç»†ä¿¡æ¯åŠæƒé™æ ‘'
  })
  @SwaggerApiResponse({
    status: 200,
    description: 'æˆåŠŸè·å–ç”¨æˆ·ä¿¡æ¯åŠæƒé™æ ‘'
  })
  async getCurrentUser(@Request() request): Promise<ApiResponse<ProfileResponse>> {
    // ä»è¯·æ±‚ä¸­è·å–å½“å‰ç”¨æˆ·ä¿¡æ¯
    const currentUser = request.user
    this.assertDataExists(currentUser, 'ç”¨æˆ·', currentUser.phone)

    // è·å–ç”¨æˆ·æƒé™æ ‘ï¼ˆä½¿ç”¨ menuTreeï¼Œä»…åŒ…å« MENU ç±»å‹èµ„æºï¼‰
    const { menuTree, list } = await this.userService.getUserResources(currentUser.phone)

    // ç»„è£…å“åº”æ•°æ®
    const profileResponse: ProfileResponse = {
      user: {
        phone: currentUser.phone,
        username: currentUser.username || ''
      },
      permissions: {
        menuTree: menuTree,
        resources: list
      }
    }

    return this.success(profileResponse, 'è·å–ç”¨æˆ·ä¿¡æ¯æˆåŠŸ')
  }

  /**
   * ç”¨æˆ·ç™»å‡º
   */
  @Post('auth/logout')
  @HttpCode(HttpStatus.OK)
  @ApiOperation({
    summary: 'ç”¨æˆ·ç™»å‡º',
    description: 'ç”¨æˆ·ç™»å‡ºï¼Œæ¸…é™¤è®¤è¯çŠ¶æ€'
  })
  @SwaggerApiResponse({
    status: 200,
    description: 'ç™»å‡ºæˆåŠŸ'
  })
  async logout(): Promise<ApiResponse<void>> {
    // è¿™é‡Œå¯ä»¥å®ç° token é»‘åå•ç­‰é€»è¾‘
    return this.success(undefined, 'ç™»å‡ºæˆåŠŸ')
  }

  // ========================================
  // ğŸ‘¥ ç”¨æˆ·ç®¡ç†ç›¸å…³æ¥å£
  // ========================================

  /**
   * è·å–ç”¨æˆ·åˆ—è¡¨
   */
  @Get('users/list')
  @ApiOperation({
    summary: 'è·å–ç”¨æˆ·åˆ—è¡¨',
    description: 'åˆ†é¡µè·å–ç”¨æˆ·åˆ—è¡¨ï¼Œæ”¯æŒæ‰‹æœºå·ã€ç”¨æˆ·åã€è§’è‰²IDå’Œæ¿€æ´»çŠ¶æ€ç­›é€‰'
  })
  @SwaggerApiResponse({
    status: 200,
    description: 'æˆåŠŸè·å–ç”¨æˆ·åˆ—è¡¨'
  })
  async getUsers(@Query() getUsersRequest: GetUsersRequest): Promise<ApiResponse<GetUsersResponse>> {
    // éªŒè¯åˆ†é¡µå‚æ•°
    const { page = 1, pageSize = 20 } = getUsersRequest.pagination || {}
    Validator.numberRange(page, 1, 1000, 'é¡µç ')
    Validator.numberRange(pageSize, 1, 100, 'æ¯é¡µæ•°é‡')

    // æ„å»ºæŸ¥è¯¢å‚æ•°
    const queryParams: any = {
      pagination: getUsersRequest.pagination
    }

    if (getUsersRequest.phone) queryParams.phone = getUsersRequest.phone
    if (getUsersRequest.username) queryParams.username = getUsersRequest.username
    if (getUsersRequest.roleIds) queryParams.roleIds = getUsersRequest.roleIds
    if (getUsersRequest.statusList) queryParams.statusList = getUsersRequest.statusList

    const result = await this.userService.findAll(queryParams)

    // ç›´æ¥ç»„è£…å“åº”æ•°æ®
    // è®¡ç®—æ€»é¡µæ•°
    const totalPages = Math.ceil(result.total / pageSize)

    const usersResponse: GetUsersResponse = {
      list: result.data.map((user) => ({
        phone: user.phone,
        username: user.username || '',
        status: user.status,
        statusDesc: getUserStatusDesc(user.status),
        createdAt: this.formatDateTime(user.createdAt),
        updatedAt: this.formatDateTime(user.updatedAt),
        roleIds: user.user_roles?.map((ur: any) => ur.roleId) || [],
        roleNames: user.user_roles?.map((ur: any) => ur.role?.name).filter((n: string | undefined) => !!n) || []
      })),
      pagination: {
        page,
        pageSize,
        total: result.total.toString(),
        totalPages
      }
    }

    return this.success(usersResponse, 'è·å–ç”¨æˆ·åˆ—è¡¨æˆåŠŸ')
  }

  /**
   * æ£€æŸ¥æ‰‹æœºå·æ˜¯å¦å­˜åœ¨
   */
  @Get('users/check-phone')
  @ApiOperation({
    summary: 'æ£€æŸ¥æ‰‹æœºå·æ˜¯å¦å­˜åœ¨',
    description: 'æ£€æŸ¥æŒ‡å®šæ‰‹æœºå·æ˜¯å¦å·²è¢«æ³¨å†Œ'
  })
  @SwaggerApiResponse({
    status: 200,
    description: 'æ£€æŸ¥å®Œæˆ'
  })
  async checkPhoneExists(@Query('phone') phone: string): Promise<ApiResponse<{ exists: boolean }>> {
    Validator.phone(phone)
    const user = await this.userService.findOne(phone)
    return this.success({ exists: !!user }, 'æ£€æŸ¥å®Œæˆ')
  }

  /**
   * æ£€æŸ¥ç”¨æˆ·åæ˜¯å¦å­˜åœ¨
   */
  @Get('users/check-username')
  @ApiOperation({
    summary: 'æ£€æŸ¥ç”¨æˆ·åæ˜¯å¦å­˜åœ¨',
    description: 'æ£€æŸ¥æŒ‡å®šç”¨æˆ·åæ˜¯å¦å·²è¢«ä½¿ç”¨'
  })
  @SwaggerApiResponse({
    status: 200,
    description: 'æ£€æŸ¥å®Œæˆ'
  })
  async checkUsernameExists(@Query('username') username: string): Promise<ApiResponse<{ exists: boolean }>> {
    Validator.username(username)
    const user = await this.userService.findByUsername(username)
    return this.success({ exists: !!user }, 'æ£€æŸ¥å®Œæˆ')
  }

  /**
   * æ ¹æ®æ‰‹æœºå·è·å–ç”¨æˆ·è¯¦æƒ…
   */
  @Get('users/detail')
  @ApiOperation({
    summary: 'è·å–ç”¨æˆ·è¯¦æƒ…',
    description: 'æ ¹æ®æ‰‹æœºå·è·å–ç”¨æˆ·çš„è¯¦ç»†ä¿¡æ¯'
  })
  @SwaggerApiResponse({
    status: 200,
    description: 'æˆåŠŸè·å–ç”¨æˆ·è¯¦æƒ…'
  })
  @SwaggerApiResponse({
    status: 404,
    description: 'ç”¨æˆ·ä¸å­˜åœ¨'
  })
  async getUserByPhone(@Query('phone') phone: string): Promise<ApiResponse<User>> {
    // éªŒè¯æ‰‹æœºå·æ ¼å¼ - è®©å¼‚å¸¸ç›´æ¥æŠ›å‡ºï¼Œç”± HttpExceptionFilter å¤„ç†
    Validator.phone(phone)

    const user = await this.userService.findOne(phone)
    this.assertDataExists(user, 'ç”¨æˆ·', phone)

    // ç›´æ¥ç»„è£…ç”¨æˆ·æ•°æ®
    const userResponse: User = {
      phone: user.phone,
      username: user.username || '',
      status: user.status,
      statusDesc: getUserStatusDesc(user.status),
      createdAt: this.formatDateTime(user.createdAt),
      updatedAt: this.formatDateTime(user.updatedAt),
      roleIds: user.user_roles?.map((ur: any) => ur.roleId) || [],
      roleNames: user.user_roles?.map((ur: any) => ur.role?.name).filter((n: string | undefined) => !!n) || []
    }

    return this.success(userResponse, 'è·å–ç”¨æˆ·è¯¦æƒ…æˆåŠŸ')
  }

  /**
   * æ–°å¢äººå‘˜ï¼ˆè¡¨å•æ–¹å¼ï¼‰
   */
  @Post('users/create')
  @HttpCode(HttpStatus.CREATED)
  @ApiOperation({
    summary: 'æ–°å¢äººå‘˜',
    description: 'é€šè¿‡è¡¨å•æ–¹å¼æ–°å¢äººå‘˜ï¼Œç³»ç»Ÿè‡ªåŠ¨ç”Ÿæˆé»˜è®¤å¯†ç '
  })
  @SwaggerApiResponse({
    status: 201,
    description: 'äººå‘˜æ–°å¢æˆåŠŸ'
  })
  @SwaggerApiResponse({
    status: 409,
    description: 'æ‰‹æœºå·å·²å­˜åœ¨'
  })
  async addUser(@Body() createUserFormRequest: CreateUserFormRequest): Promise<ApiResponse<User>> {
    // åŸºç¡€æ ¼å¼éªŒè¯
    Validator.phone(createUserFormRequest.phone)
    Validator.username(createUserFormRequest.username)

    // æ£€æŸ¥æ‰‹æœºå·æ˜¯å¦å·²å­˜åœ¨
    const existingUser = await this.userService.findOne(createUserFormRequest.phone)
    if (existingUser) {
      this.throwConflictError('è¯¥æ‰‹æœºå·å·²è¢«æ³¨å†Œ')
    }

    // ç”Ÿæˆé»˜è®¤å¯†ç ï¼šAa + æ‰‹æœºå·å6ä½
    const defaultPassword = `Aa${createUserFormRequest.phone.slice(-6)}!`

    // åˆ›å»ºç”¨æˆ·
    const user = await this.userService.create({
      phone: createUserFormRequest.phone,
      username: createUserFormRequest.username,
      password: defaultPassword
    })

    // ç›´æ¥ç»„è£…ç”¨æˆ·æ•°æ®ï¼ˆæ–°å¢äººå‘˜æ—¶ä¸åˆ†é…è§’è‰²ï¼‰
    const userResponse: User = {
      phone: user.phone,
      username: user.username || '',
      status: user.status,
      statusDesc: getUserStatusDesc(user.status),
      createdAt: this.formatDateTime(user.createdAt),
      updatedAt: this.formatDateTime(user.updatedAt),
      roleIds: [],
      roleNames: []
    }

    return this.success(userResponse, 'äººå‘˜æ–°å¢æˆåŠŸ')
  }

  /**
   * æ›´æ–°ç”¨æˆ·ä¿¡æ¯
   */
  @Post('users/update')
  @ApiOperation({
    summary: 'æ›´æ–°ç”¨æˆ·ä¿¡æ¯',
    description: 'æ›´æ–°æŒ‡å®šç”¨æˆ·çš„ä¿¡æ¯'
  })
  @SwaggerApiResponse({
    status: 200,
    description: 'ç”¨æˆ·ä¿¡æ¯æ›´æ–°æˆåŠŸ'
  })
  @SwaggerApiResponse({
    status: 404,
    description: 'ç”¨æˆ·ä¸å­˜åœ¨'
  })
  async updateUser(@Body() updateUserRequest: UpdateUserRequest & { phone: string }): Promise<ApiResponse<User>> {
    // éªŒè¯æ‰‹æœºå·
    Validator.phone(updateUserRequest.phone)
    const phone = updateUserRequest.phone

    // éªŒè¯æ›´æ–°å­—æ®µï¼ˆå¦‚æœæä¾›ï¼‰
    if (isNotEmpty(updateUserRequest.username)) {
      Validator.username(updateUserRequest.username)
    }

    if (updateUserRequest.roleIds && updateUserRequest.roleIds.length > 0) {
      Validator.arrayNotEmpty(updateUserRequest.roleIds, 'è§’è‰²åˆ—è¡¨')
    }

    // æ£€æŸ¥ç”¨æˆ·æ˜¯å¦å­˜åœ¨
    const existingUser = await this.userService.findOne(phone)
    this.assertDataExists(existingUser, 'ç”¨æˆ·', phone)

    // æ›´æ–°ç”¨æˆ·ä¿¡æ¯ï¼ˆä¸å…è®¸æ›´æ–°çŠ¶æ€å­—æ®µï¼‰
    await this.userService.update(phone, {
      username: updateUserRequest.username || ''
    })

    // å¦‚æœæä¾›äº†è§’è‰²IDåˆ—è¡¨ï¼Œæ›´æ–°ç”¨æˆ·è§’è‰²
    if (updateUserRequest.roleIds !== undefined) {
      await this.userService.assignUserRoles(phone, updateUserRequest.roleIds)
    }

    // é‡æ–°æŸ¥è¯¢ç”¨æˆ·ä»¥è·å–æœ€æ–°ä¿¡æ¯ï¼ˆåŒ…æ‹¬è§’è‰²ï¼‰
    const userWithRoles = await this.userService.findOne(phone)

    // ç›´æ¥ç»„è£…ç”¨æˆ·æ•°æ®
    const userResponse: User = {
      phone: userWithRoles!.phone,
      username: userWithRoles!.username || '',
      status: userWithRoles!.status,
      statusDesc: getUserStatusDesc(userWithRoles!.status),
      createdAt: this.formatDateTime(userWithRoles!.createdAt),
      updatedAt: this.formatDateTime(userWithRoles!.updatedAt),
      roleIds: userWithRoles!.user_roles?.map((ur: any) => ur.roleId) || [],
      roleNames: userWithRoles!.user_roles?.map((ur: any) => ur.role?.name).filter((n: string | undefined) => !!n) || []
    }

    return this.success(userResponse, 'ç”¨æˆ·ä¿¡æ¯æ›´æ–°æˆåŠŸ')
  }

  /**
   * åˆ é™¤ç”¨æˆ·
   */
  @Post('users/delete')
  @ApiOperation({
    summary: 'åˆ é™¤ç”¨æˆ·',
    description: 'åˆ é™¤æŒ‡å®šçš„ç”¨æˆ·è´¦å·'
  })
  @SwaggerApiResponse({
    status: 200,
    description: 'ç”¨æˆ·åˆ é™¤æˆåŠŸ'
  })
  @SwaggerApiResponse({
    status: 404,
    description: 'ç”¨æˆ·ä¸å­˜åœ¨'
  })
  async deleteUser(@Body() body: { phone: string }): Promise<ApiResponse<void>> {
    // éªŒè¯æ‰‹æœºå·æ ¼å¼
    Validator.phone(body.phone)

    // æ£€æŸ¥ç”¨æˆ·æ˜¯å¦å­˜åœ¨
    const existingUser = await this.userService.findOne(body.phone)
    this.assertDataExists(existingUser, 'ç”¨æˆ·', body.phone)

    // åˆ é™¤ç”¨æˆ·
    await this.userService.remove(body.phone)

    return this.success(undefined, 'ç”¨æˆ·åˆ é™¤æˆåŠŸ')
  }

  // ========================================
  // ğŸ“Š ç”¨æˆ·çŠ¶æ€æ“ä½œç›¸å…³æ¥å£
  // ========================================

  /**
   * ç”¨æˆ·çŠ¶æ€æ“ä½œç»Ÿä¸€æ¥å£
   */
  @Post('users/update-status')
  @ApiOperation({
    summary: 'ç”¨æˆ·çŠ¶æ€æ“ä½œ',
    description: 'ç»Ÿä¸€çš„ç”¨æˆ·çŠ¶æ€æ“ä½œæ¥å£ï¼Œæ”¯æŒæ¿€æ´»ã€ä¸‹çº¿ã€é”å®šã€è§£é”æ“ä½œ'
  })
  @SwaggerApiResponse({
    status: 200,
    description: 'çŠ¶æ€æ“ä½œæˆåŠŸ'
  })
  @SwaggerApiResponse({
    status: 400,
    description: 'æ— æ•ˆçš„æ“ä½œç±»å‹'
  })
  @SwaggerApiResponse({
    status: 404,
    description: 'ç”¨æˆ·ä¸å­˜åœ¨'
  })
  async updateUserStatus(@Body() request: UserStatusActionRequest & { phone: string }): Promise<ApiResponse<User>> {
    // éªŒè¯æ‰‹æœºå·æ ¼å¼
    Validator.phone(request.phone)
    const phone = request.phone

    // éªŒè¯æ“ä½œç±»å‹
    const validActions = ['activate', 'deactivate', 'lock', 'unlock'] as const
    if (!validActions.includes(request.action)) {
      this.throwValidationError(`æ— æ•ˆçš„æ“ä½œç±»å‹: ${request.action}ï¼Œæ”¯æŒçš„æ“ä½œ: ${validActions.join(', ')}`)
    }

    // æ£€æŸ¥ç”¨æˆ·æ˜¯å¦å­˜åœ¨
    const existingUser = await this.userService.findOne(phone)
    this.assertDataExists(existingUser, 'ç”¨æˆ·', phone)

    // æ ¹æ®æ“ä½œç±»å‹è°ƒç”¨ç›¸åº”çš„æœåŠ¡æ–¹æ³•
    let successMessage = ''
    let targetStatus: number

    switch (request.action) {
      case 'activate':
        targetStatus = 2 // æ¿€æ´»çŠ¶æ€
        successMessage = 'ç”¨æˆ·æ¿€æ´»æˆåŠŸ'
        break
      case 'deactivate':
        targetStatus = 3 // ä¸‹çº¿çŠ¶æ€
        successMessage = 'ç”¨æˆ·ä¸‹çº¿æˆåŠŸ'
        break
      case 'lock':
        targetStatus = 4 // é”å®šçŠ¶æ€
        successMessage = 'ç”¨æˆ·é”å®šæˆåŠŸ'
        break
      case 'unlock':
        targetStatus = 2 // è§£é”å®é™…æ˜¯æ¿€æ´»çŠ¶æ€
        successMessage = 'ç”¨æˆ·è§£é”æˆåŠŸ'
        break
      default:
        // TypeScript ä¼šç¡®ä¿è¿™é‡Œä¸ä¼šè¢«æ‰§è¡Œ
        this.throwValidationError(`ä¸æ”¯æŒçš„æ“ä½œç±»å‹: ${request.action}`)
    }

    // ç»Ÿä¸€è°ƒç”¨æ›´æ–°çŠ¶æ€æ–¹æ³•
    await this.userService.updateUserStatus(phone, targetStatus)

    // é‡æ–°æŸ¥è¯¢ç”¨æˆ·ä»¥è·å–è§’è‰²ä¿¡æ¯
    const userWithRoles = await this.userService.findOne(phone)

    // ç›´æ¥ç»„è£…ç”¨æˆ·æ•°æ®
    const userResponse: User = {
      phone: userWithRoles!.phone,
      username: userWithRoles!.username || '',
      status: userWithRoles!.status,
      statusDesc: getUserStatusDesc(userWithRoles!.status),
      createdAt: this.formatDateTime(userWithRoles!.createdAt),
      updatedAt: this.formatDateTime(userWithRoles!.updatedAt),
      roleIds: userWithRoles!.user_roles?.map((ur: any) => ur.roleId) || [],
      roleNames: userWithRoles!.user_roles?.map((ur: any) => ur.role?.name).filter((n: string | undefined) => !!n) || []
    }

    return this.success(userResponse, successMessage)
  }

  // ========================================
  // ğŸ‘¤ ç”¨æˆ·è§’è‰²ç®¡ç†ç›¸å…³æ¥å£
  // ========================================

  /**
   * åˆ†é…ç”¨æˆ·è§’è‰²
   */
  @Post('users/roles')
  @HttpCode(HttpStatus.OK)
  @ApiOperation({
    summary: 'åˆ†é…ç”¨æˆ·è§’è‰²',
    description: 'è¦†ç›–å¼åˆ†é…ç”¨æˆ·è§’è‰²ï¼Œä½¿ç”¨äº‹åŠ¡ä¿è¯ä¸€è‡´æ€§'
  })
  @SwaggerApiResponse({
    status: 200,
    description: 'è§’è‰²åˆ†é…æˆåŠŸ'
  })
  @SwaggerApiResponse({
    status: 404,
    description: 'ç”¨æˆ·ä¸å­˜åœ¨'
  })
  async assignUserRoles(@Body() body: { phone: string; roleIds: string[] }): Promise<ApiResponse<{ success: boolean; assignedCount: number }>> {
    // éªŒè¯æ‰‹æœºå·æ ¼å¼
    Validator.phone(body.phone)

    // éªŒè¯è§’è‰²IDåˆ—è¡¨
    if (!Array.isArray(body.roleIds)) {
      this.throwValidationError('è§’è‰²IDåˆ—è¡¨å¿…é¡»ä¸ºæ•°ç»„')
    }

    const result = await this.userService.assignUserRoles(body.phone, body.roleIds)

    return this.success(result, 'è§’è‰²åˆ†é…æˆåŠŸ')
  }

  /**
   * è·å–ç”¨æˆ·èµ„æºæ ‘
   */
  @Get('users/resources')
  @ApiOperation({
    summary: 'è·å–ç”¨æˆ·èµ„æºæ ‘',
    description: 'èšåˆç”¨æˆ·æ‰€æœ‰è§’è‰²çš„èµ„æºï¼Œè¿”å›èµ„æºæ ‘å’Œå¹³é“ºåˆ—è¡¨'
  })
  @SwaggerApiResponse({
    status: 200,
    description: 'æˆåŠŸè·å–ç”¨æˆ·èµ„æºæ ‘'
  })
  @SwaggerApiResponse({
    status: 404,
    description: 'ç”¨æˆ·ä¸å­˜åœ¨'
  })
  async getUserResources(@Query('phone') phone: string): Promise<ApiResponse<{ tree: any[]; list: any[] }>> {
    // éªŒè¯æ‰‹æœºå·æ ¼å¼
    Validator.phone(phone)

    const resources = await this.userService.getUserResources(phone)

    return this.success(resources, 'è·å–ç”¨æˆ·èµ„æºæ ‘æˆåŠŸ')
  }

  // ========================================
  // ğŸ“Š ç”¨æˆ·ç»Ÿè®¡ç›¸å…³æ¥å£
  // ========================================
}
